[feat] 게시물 작성 일부 쿼리 작성